--- a/project1/auth_module/templates/login.html
+++ b/project1/auth_module/templates/login.html
@@ -3,9 +3,33 @@
 {% load crispy_forms_tags %}
 {% load static %}
 
+
+
 {% block content %}
-<h1>Login</h1>
-{% csrf_token %}
-{% crispy form %}
-<!-- {{ form | crispy }} -->
+    <div id="login">
+        <form class="form-horizontal" name="LoginForm" method="post">
+        {% csrf_token %}
+        {% if next %}
+            <input type="hidden" name="next" value="{{ next }}" />
+        {% endif %}
+        <div class="control-group">
+            <label class="control-label" for="username">Username</label>
+            <div class="controls">
+                <input type="text" id="username" name="username"  placeholder="Username">
+            </div>
+        </div>
+        <div class="control-group">
+            <label class="control-label" for="password">Password</label>
+            <div class="controls">
+                <input type="password" name="password" id="password" placeholder="Password">
+            </div>
+        </div>
+        <div class="control-group">
+            <div class="controls">
+                <button type="submit" class="btn">Login</button>
+            </div>
+        </div>
+        </form>
+    </div>
 {% endblock %}
+
