--- a/project1/auth_module/templates/home.html
+++ b/project1/auth_module/templates/home.html
@@ -8,4 +8,9 @@
 {% block content %}
 <h1>bla bla home</h1>
  <p>Welcome, {{ user.username }}.</p> 
+
+<a href="/gym_home"> Gym Exercises</a><br>
+ <a href="/yoga_home"> Yoga</a><br>
+
+ <a href="/logout_user" class="button btn-danger btn-round"> Logout </a>
 {% endblock %}
