Project ho gaya

--- a/project1/auth_module/templates/bird_dog.html
+++ b/project1/auth_module/templates/bird_dog.html
@@ -9,8 +9,7 @@
 <h1>bird dog section</h1>
  <p>Welcome, {{ user.username }}.</p> 
 
- <h3> <a href="gym_home/plank"> Plank</a> </h3>
- <h3> <a href="gym_home/bird_dog"> Bird Dog</a> </h3>
+ <img src="{% url 'video_feed' %}">
 
  <a href="/home">home</a>
 
