signup login designing and vid rendering

--- a/project1/auth_module/templates/gym_home.html
+++ b/project1/auth_module/templates/gym_home.html
@@ -3,7 +3,10 @@
 
 {% load static %}
 {% block content %}
+
+{% include "navbar.html" %}
 <h1>gym section</h1>
+
  <p>Welcome, {{ user.username }}.</p> 
 
  <h3> <a href="/plank"> Plank</a> </h3>
