--- a/project1/auth_module/templates/login.html
+++ b/project1/auth_module/templates/login.html
@@ -6,30 +6,105 @@
 
 
 {% block content %}
-    <div id="login">
-        <form class="form-horizontal" name="LoginForm" method="post">
-        {% csrf_token %}
-        {% if next %}
-            <input type="hidden" name="next" value="{{ next }}" />
-        {% endif %}
-        <div class="control-group">
-            <label class="control-label" for="username">Username</label>
-            <div class="controls">
-                <input type="text" id="username" name="username"  placeholder="Username">
-            </div>
+<body class="login-page sidebar-collapse">
+
+    <div class="page-header header-filter" style="background-image: url('../assets/img/bg7.jpg'); background-size: cover; background-position: top center;">
+      <div class="container">
+        <div class="row">
+          <div class="col-lg-4 col-md-6 col-sm-8 ml-auto mr-auto">
+           
+              <div class="card card-login card-hidden">
+                <div class="card-header card-header-primary text-center">
+                  <h1 class="card-title">Fitlife</h1>
+                  <div class="social-line">
+                    <h3>Login</h3>
+                  </div>
+                </div>
+                <div class="card-body ">
+                  <p class="card-description text-center">Or Be Classical</p>
+                  <form class="form-horizontal"  name="LoginForm" method="post">
+                      {% csrf_token %}
+                  <span class="bmd-form-group">
+                    <div class="input-group">
+                      <div class="input-group-prepend">
+                        <span class="input-group-text">
+                          <i class="material-icons">face</i>
+                        </span>
+                      </div>
+                    
+                      <input type="text" id="username" name="username" class="form-control" placeholder="Username">
+                    </div>
+                  </span>
+                  <span class="bmd-form-group">
+                    <div class="input-group">
+                      <div class="input-group-prepend">
+                        <span class="input-group-text">
+                          <i class="material-icons">lock_outline</i>
+                        </span>
+                      </div>
+                     
+                      <input type="password" name="password" id="password"  class="form-control" placeholder="Password">
+
+                    </div>
+                  </span>
+                  <div class="card-footer justify-content-center">
+                    <button type="submit" class="btn btn-rose btn-link btn-lg">Login</button>
+                  </div>
+                  
+                </form>
+                </div>
+                <!-- <div class="card-footer justify-content-center">
+                  <a href="#pablo" class="btn btn-rose btn-link btn-lg">Lets Go</a>
+                </div> -->
+              </div>
+          
+          </div>
         </div>
-        <div class="control-group">
-            <label class="control-label" for="password">Password</label>
-            <div class="controls">
-                <input type="password" name="password" id="password" placeholder="Password">
-            </div>
+      </div>
+      <footer class="footer">
+        <div class="container">
+          <nav class="float-left">
+            <ul>
+              <li>
+                <a href="https://www.creative-tim.com">
+                  Creative Tim
+                </a>
+              </li>
+              <li>
+                <a href="https://creative-tim.com/presentation">
+                  About Us
+                </a>
+              </li>
+              <li>
+                <a href="http://blog.creative-tim.com">
+                  Blog
+                </a>
+              </li>
+              <li>
+                <a href="https://www.creative-tim.com/license">
+                  Licenses
+                </a>
+              </li>
+            </ul>
+          </nav>
+          <div class="copyright float-right">
+            &copy;
+            <script>
+              document.write(new Date().getFullYear())
+            </script>, made with <i class="material-icons">favorite</i> by
+            <a href="https://www.creative-tim.com" target="_blank">Creative Tim</a> for a better web.
+          </div>
         </div>
-        <div class="control-group">
-            <div class="controls">
-                <button type="submit" class="btn">Login</button>
-            </div>
-        </div>
-        </form>
+      </footer>
     </div>
+  
+
+
+
+
+
+
+    
+        
 {% endblock %}
 
