All files integrated

--- a/project1/auth_module/templates/urdhavahastasana.html
+++ b/project1/auth_module/templates/urdhavahastasana.html
@@ -6,11 +6,8 @@
 
 
 {% block content %}
-<h1>bird dog section</h1>
+<h1>Urdhavahastasana section</h1>
  <p>Welcome, {{ user.username }}.</p> 
-
- <!--<img src="{% url 'video_feed' %}">-->
-
 
  <a href="/home">home</a>
 
