--- a/project1/auth_module/templates/yoga_home.html
+++ b/project1/auth_module/templates/yoga_home.html
@@ -7,6 +7,9 @@
 {% block content %}
 <h1>yoga section</h1>
  <p>Welcome, {{ user.username }}.</p> 
+
+ <h3> <a href="/urdhavahastasana"> Urdhavahastasana</a> </h3>
+ <h3> <a href="/veerbhadrasana"> Veerbhadrasana</a> </h3> 
  <a href="/home">home</a>
  
 {% endblock %}
