--- a/project1/auth_module/templates/login.html
+++ b/project1/auth_module/templates/login.html
@@ -52,6 +52,7 @@
                   </div>
                   
                 </form>
+                <a href="/register/"><u><p class="card-description text-center">New User? Register now.</p></u></a>
                 </div>
                 <!-- <div class="card-footer justify-content-center">
                   <a href="#pablo" class="btn btn-rose btn-link btn-lg">Lets Go</a>
