--- a/project1/auth_module/templates/register.html
+++ b/project1/auth_module/templates/register.html
@@ -23,12 +23,12 @@
                   <div class="col-md-5 ml-auto">
                     <div class="info info-horizontal">
                       <div class="icon icon-rose">
-                        <i class="material-icons">timeline</i>
+                        <i class="material-icons">fitness_center</i>
                       </div>
                       <div class="description">
-                        <h4 class="info-title">Marketing</h4>
+                        <h4 class="info-title">What is Fitlife</h4>
                         <p class="description">
-                          We've created the marketing campaign of the website. It was a very interesting collaboration.
+                         During this pandemic situation when everyone has to stay in their house, maintaining personal health is the major issue faced by many. FitLife is an application which can guide you as a personal trainer.
                         </p>
                       </div>
                     </div>
