--- a/project1/auth_module/templates/login.html
+++ b/project1/auth_module/templates/login.html
@@ -6,9 +6,9 @@
 
 
 {% block content %}
-<body class="login-page sidebar-collapse">
+<body class="login-page ">
 
-    <div class="page-header header-filter" style="background-image: url('../assets/img/bg7.jpg'); background-size: cover; background-position: top center;">
+    <div class="page-header header-filter " filter-color="purple" style="background: url('static/assets/img/fitlife_img/login_img3.jpeg'); opacity : 0.9;  background-size: cover; background-position: top center;" >
       <div class="container">
         <div class="row">
           <div class="col-lg-4 col-md-6 col-sm-8 ml-auto mr-auto">
@@ -68,22 +68,12 @@
             <ul>
               <li>
                 <a href="https://www.creative-tim.com">
-                  Creative Tim
+               FitLife
                 </a>
               </li>
               <li>
                 <a href="https://creative-tim.com/presentation">
                   About Us
-                </a>
-              </li>
-              <li>
-                <a href="http://blog.creative-tim.com">
-                  Blog
-                </a>
-              </li>
-              <li>
-                <a href="https://www.creative-tim.com/license">
-                  Licenses
                 </a>
               </li>
             </ul>
@@ -93,7 +83,7 @@
             <script>
               document.write(new Date().getFullYear())
             </script>, made with <i class="material-icons">favorite</i> by
-            <a href="https://www.creative-tim.com" target="_blank">Creative Tim</a> for a better web.
+            <a href="https://www.creative-tim.com" target="_blank">FitLife</a> for better health.
           </div>
         </div>
       </footer>
