--- a/project1/auth_module/templates/register.html
+++ b/project1/auth_module/templates/register.html
@@ -15,7 +15,7 @@
           <div class="col-md-10 ml-auto mr-auto">
             <div class="card card-signup">
                 <div class="">
-                    <h1 class="card-title text-center">Fitlife</h1>
+                    <h1 class="card-title text-center">FitLife</h1>
                 </div>
               <!-- <h1 class="card-title text-center">FITLIFE</h1> -->
               <div class="card-body">
@@ -37,23 +37,19 @@
                         <i class="material-icons">code</i>
                       </div>
                       <div class="description">
-                        <h4 class="info-title">Fully Coded in HTML5</h4>
+                        <h4 class="info-title">Features of FitLife</h4>
                         <p class="description">
-                          We've developed the website with HTML5 and CSS3. The client has access to the code using GitHub.
+                         <ul class=" ml-2 pl-2">
+                           <li> Realtime Posture Correction to avoid fatal injuries  </li>
+                           <li>Constant checking of user's heart-rate long term health benefits </li>
+                           <li> Realtime audio feedback for personal trainer like experience</li>
+                           <li>  All the features are applicable for both Yoga Asanas and Exercises.</li>
+                         </ul>
+                         
                         </p>
                       </div>
                     </div>
-                    <div class="info info-horizontal">
-                      <div class="icon icon-info">
-                        <i class="material-icons">group</i>
-                      </div>
-                      <div class="description">
-                        <h4 class="info-title">Built Audience</h4>
-                        <p class="description">
-                          There is also a Fully Customizable CMS Admin Dashboard for this product.
-                        </p>
-                      </div>
-                    </div>
+                 
                   </div>
                   <div class="col-md-5 mr-auto tim-container">
                     <div class="social text-center">
@@ -109,6 +105,7 @@
                             {{ form.as_p }}
                             <button type="submit" class="btn btn-success">Register</button>
                         </form>
+                        <a href="/"><u><p class="card-description text-center">Already a User? Go to Login Page</p></u></a>
                     </div>
                    <script>
                        
@@ -131,25 +128,16 @@
           <nav class="float-left">
             <ul>
               <li>
-                <a href="https://www.creative-tim.com">
-                  Creative Tim
+                <a href="">
+                  FitLife
                 </a>
               </li>
               <li>
-                <a href="https://creative-tim.com/presentation">
+                <a href="">
                   About Us
                 </a>
               </li>
-              <li>
-                <a href="http://blog.creative-tim.com">
-                  Blog
-                </a>
-              </li>
-              <li>
-                <a href="https://www.creative-tim.com/license">
-                  Licenses
-                </a>
-              </li>
+             
             </ul>
           </nav>
           <div class="copyright float-right">
@@ -157,7 +145,7 @@
             <script>
               document.write(new Date().getFullYear())
             </script>, made with <i class="material-icons">favorite</i> by
-            <a href="https://www.creative-tim.com" target="_blank">Creative Tim</a> for a better web.
+            <a href="https://www.creative-tim.com" target="_blank">FitLife</a> for better health.
           </div>
         </div>
       </footer>
