--- a/project1/auth_module/templates/navbar.html
+++ b/project1/auth_module/templates/navbar.html
@@ -2,7 +2,7 @@
     <nav class="navbar navbar-expand-lg bg-primary">
         <div class="container">
           <div class="navbar-translate">
-            <h2 class=" m-0 p-0" href="#0">Fitlife</h2>
+            <h2 class=" m-0 p-0">FitLife</h2>
             <button class="navbar-toggler" type="button" data-toggle="collapse" aria-expanded="false" aria-label="Toggle navigation">
               <span class="sr-only">Toggle navigation</span>
               <span class="navbar-toggler-icon"></span>
@@ -13,9 +13,9 @@
           <div class="collapse navbar-collapse">
             <ul class="navbar-nav ml-auto">
               <li class="active nav-item">
-                <a href="#pablo" class="nav-link">
-                  <i class="material-icons">explore</i>
-                  Discover
+                <a href="/home" class="nav-link">
+                  <i class="material-icons">home</i>
+                  Home
                 </a>
               </li>
               <li class="nav-item">
@@ -25,9 +25,9 @@
                 </a>
               </li>
               <li class="nav-item">
-                <a href="#pablo" class="nav-link">
-                  <i class="material-icons">settings</i>
-                  Settings
+                <a href="/logout_user" class="nav-link">
+                  <i class="material-icons">logout</i>
+                  Logout
                 </a>
               </li>
             </ul>
