--- a/project1/auth_module/templates/yoga_home.html
+++ b/project1/auth_module/templates/yoga_home.html
@@ -33,7 +33,7 @@
         <div class="card card-blog">
             <div class="card-body pb-5">
                 <span class="card-category text-warning h3 ">URDHVAHASTASANA</span>
-                <a href="/urdhvahastasana" class="btn btn-warning btn-round ml-5">
+                <a href="/urdhavahastasana" class="btn btn-warning btn-round ml-5">
                   <i class="material-icons">favorite</i> Start exercise
                 </a>
               </div>
@@ -58,7 +58,7 @@
            </h4>
   
              
-           <a href="/urdhvahastasana" class="btn btn-warning btn-round">
+           <a href="/urdhavahastasana" class="btn btn-warning btn-round">
             <i class="material-icons">favorite</i> Start exercise
           </a>  
       
@@ -69,7 +69,7 @@
         <div class="card card-blog">
             <div class="card-body pb-5">
                 <span class="card-category text-rose h3 ">VEERBHADRASANA 2</span>
-                <a href="/urdhvahastasana" class="btn btn-danger btn-round ml-5">
+                <a href="/veerbhadrasana" class="btn btn-danger btn-round ml-5">
                   <i class="material-icons">favorite</i> Start exercise
                 </a>
               </div>
@@ -99,7 +99,7 @@
                 </li>
                </ul>
            </h4>
-           <a href="/urdhvahastasana" class="btn btn-danger btn-round ">
+           <a href="/veerbhadrasana" class="btn btn-danger btn-round ">
             <i class="material-icons">favorite</i> Start exercise
           </a>
           </div>
