--- a/project1/auth_module/templates/home.html
+++ b/project1/auth_module/templates/home.html
@@ -8,7 +8,7 @@
 
 {% include "navbar.html" %}
 
-<div class="container  header-filter" filter-color="green" style="background: url('static/assets/img/fitlife_img/login_img3.jpeg');   background-size: cover; background-position: top center;"  >
+<div class="container">
   <div class="row">
     <div class="col-md-12">
       <div class="title">
