--- a/project1/auth_module/templates/gym_home.html
+++ b/project1/auth_module/templates/gym_home.html
@@ -23,7 +23,7 @@
                 </li>
                 <li> <i>WARM UP:</i> Not warming up is a mistake many beginners make. Before any session ensure that you warm up thoroughly and mobilise the areas that you will be using during the workout. Furthermore, failure to warm up properly may increase the risk of injury.</li>
                 <li><i>TIME OF DAY: </i>We are all different. Some of us rise early and some of us go to bed late. Exercise at the time when you feel that you have most energy.</li>
-                <li><i>WILL POWER</i>Don’t give up. All beginners have set backs on the way to achieving their goals. Accept them and use them to re-motivate yourself.</li>
+                <li><i>WILL POWER: </i>Don’t give up. All beginners have set backs on the way to achieving their goals. Accept them and use them to re-motivate yourself.</li>
                 <li><i>WATER: </i>Ensure you drink plenty of water, before, during and after exercise, particularly if you are exercising in warm conditions or for long periods. Dehydration will result in a drop in performance and severe dehydration can be dangerous too.</li>
               </ul>
           </h4>
