final commit tt2

--- a/project1/auth_module/templates/gym_home.html
+++ b/project1/auth_module/templates/gym_home.html
@@ -34,7 +34,7 @@
     <h2 id="coloredShadows pb-0 mb-0">Exercises</h2>
     <div class="row">
         
-      <div class="col-md-6 pt-0 mt-0">
+      <div class="col-md-4 pt-0 mt-0">
         <div class="card card-blog">
             <div class="card-body pb-5">
                 <span class="card-category text-warning h3 ">PLANK</span>
@@ -74,7 +74,7 @@
           </div>
         </div>
       </div>
-      <div class="col-md-6">
+      <div class="col-md-4">
         <div class="card card-blog">
             <div class="card-body pb-5">
                 <span class="card-category text-rose h3 ">BIRD DOG</span>
@@ -105,7 +105,42 @@
           </div>
         </div>
       </div>
-     
+      
+      <div class="col-md-4">
+        <div class="card card-blog">
+            <div class="card-body pb-5">
+                <span class="card-category text-rose h3 ">Lunges</span>
+                <a href="/lunges" class="btn btn-danger btn-round ml-5">
+                  <i class="material-icons">favorite</i> Start exercise
+                </a>
+              </div>
+          <div class="card-header card-header-image">
+            <a href="#pablo">
+              <img src="{% static './assets/img/fitlife_img/lunges.jpg' %}" alt="">
+            </a>
+          </div>
+          <div class="card-body">
+            <h4 class="card-description">
+              Lunges are a popular strength training exercise among people wanting to strengthen, sculpt, and tone their bodies, while also improving overall fitness and enhancing athletic performance.This resistance exercise is popular for its ability to strengthen your back, hips, and legs, while improving mobility and stability. Lunges are ideal for those wishing to get stronger and for current athletes, including runners and cyclists.
+            </h4>
+
+            <h4 class="card-description">
+              Lunges are simple, making them accessible to people who want to add them to part of a longer routine or do them for a few minutes at a time throughout the day. You must stay on track and be consistent to maintain your results over time.If you do lunges regularly as part of a larger fitness routine, you’ll notice results in terms of building muscle mass and shaping up your body. You’ll likely feel the results before they are visible.
+            </h4>
+
+            <h4 class="card-description">
+              The physical benefits of doing lunges may extend into other areas of your life, giving you more strength and confidence. Get the form down correctly before you move on to more challenging variations, and modify as necessary.
+            </h4>
+            <a href="/lunges" class="btn btn-danger btn-round">
+                <i class="material-icons">favorite</i> Start exercise
+              </a>
+          </div>
+        </div>
+      </div>
+
+
+
+
     </div>
   </div>
 
