--- a/project1/auth_module/templates/yoga_home.html
+++ b/project1/auth_module/templates/yoga_home.html
@@ -27,9 +27,9 @@
         </div>
       </div>
     </div>
-    <h2 id="coloredShadows">Exercises</h2>
+    <h2 id="coloredShadows">Yogasanas</h2>
     <div class="row">
-      <div class="col-md-6">
+      <div class="col-md-4">
         <div class="card card-blog">
             <div class="card-body pb-5">
                 <span class="card-category text-warning h3 ">URDHVAHASTASANA</span>
@@ -65,7 +65,7 @@
           </div>
         </div>
       </div>
-      <div class="col-md-6">
+      <div class="col-md-4">
         <div class="card card-blog">
             <div class="card-body pb-5">
                 <span class="card-category text-rose h3 ">VEERBHADRASANA 2</span>
@@ -100,6 +100,45 @@
                </ul>
            </h4>
            <a href="/veerbhadrasana" class="btn btn-danger btn-round ">
+            <i class="material-icons">favorite</i> Start exercise
+          </a>
+          </div>
+        </div>
+      </div>
+
+      <div class="col-md-4">
+        <div class="card card-blog">
+            <div class="card-body pb-5">
+                <span class="card-category text-rose h3 ">TreePose</span>
+                <a href="/treepose" class="btn btn-danger btn-round ml-5">
+                  <i class="material-icons">favorite</i> Start exercise
+                </a>
+              </div>
+          <div class="card-header card-header-image">
+            <a href="#pablo">
+              <img src="{% static './assets/img/fitlife_img/treepose.png' %}" alt="">
+            </a>
+          </div>
+          <div class="card-body">
+           <h4 class="card-description">
+            This is derived from two words ‘vriksha’, which means tree in Sanskrit, and ‘asana’, which means posture. This ‘tree pose’ dates back to ancient mythology, and there are in fact references of it in the Ramayana. Lord Ravana stood in vrikshasana for penance, praying to Lord Shiva for a boon, and the posture has been considered powerful ever since
+           </h4>
+           <h4 class="card-description">
+               There are many benefits of vrikshasana such as:
+               <ul>
+                <li>Vrikshasana Promotes Balance.
+                </li>
+                <li>Vrikshasana Helps Tone The Leg Muscles.
+                </li>
+                <li>You Can Strengthen The Hips and Pelvic Region With Vrikshasana.
+                </li>
+                <li>Vrikshasana Helps Build Focus and Concentration.
+                </li>
+                <li>Reduce The Risk of Sciatica With Vrikshasana.
+                </li>
+               </ul>
+           </h4>
+           <a href="/treepose" class="btn btn-danger btn-round ">
             <i class="material-icons">favorite</i> Start exercise
           </a>
           </div>
