Parth Mehta's commit

--- a/project1/auth_module/templates/gym_home.html
+++ b/project1/auth_module/templates/gym_home.html
@@ -109,7 +109,7 @@
       <div class="col-md-4">
         <div class="card card-blog">
             <div class="card-body pb-5">
-                <span class="card-category text-rose h3 ">Lunges</span>
+                <span class="card-category text-rose h3 ">LUNGES</span>
                 <a href="/lunges" class="btn btn-danger btn-round ml-5">
                   <i class="material-icons">favorite</i> Start exercise
                 </a>
